--- a/CMakeServer/CMakeLists.txt
+++ b/CMakeServer/CMakeLists.txt
@@ -4,6 +4,6 @@
 cmake_minimum_required (VERSION 3.8)
 
 # Add source to this project's executable.
-add_executable (CMakeServer "CMakeServer.cpp" "CMakeServer.h" "lock/locker.h" "Mysql/connection.h" "Mysql/connection.cpp")
+add_executable (CMakeServer "CMakeServer.cpp" "CMakeServer.h" "lock/blockingqueue.h" "Mysql/connection.h" "Mysql/connection.cpp" "log/log.cpp" "log/log.h" "timer/timer.h" "timer/timer.cpp" "threadpool/threadpool.h" )
 
 # TODO: Add tests and install targets if needed.
